prevent too large viewbox, when opening hamburger menu

--- a/gotsch24.css
+++ b/gotsch24.css
@@ -571,6 +571,12 @@ div.hero-slider-block .cta-button:hover {
   overflow: visible;
 }
 
+@media (max-width: 1024px) {
+  .rs-template-list-slider div.will-change-transform {
+    overflow: hidden;
+  }
+}
+
 div.rs-griditem.rs-teaser {
   border-radius: var(--image-border-radius) !important;
   padding: 0px;
